<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smart Calendar</string>
    <string name="edit_event">Edit Event</string>
    <string name="add_event">Add Event</string>
    <string name="action_settings">Settings</string>
    
    <string name="action_home">Home</string>
    <string name="action_new">New</string>
     <string name="text">text</string>
    <string name="action_list">List</string>
    <string name="action_new_event">Add Event</string>
    <string name="event_decription">Description</string>
    <string name="action_list_event">List Event</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="event_form_title">Add Event</string>
    <string name="event_name">Event Name: </string>
    <string name="text_eventname"></string>
    <string name="event_time">Event Time: </string>
    <string name="event_date">Event Date: </string>
    <string name="event_location">Event Location: </string>
    <string name="event_add_button">Add Event</string>
    <string name="event_save_button">Save</string>
    <string name="event_delete_button">Delete</string>
    <string name="event_cancel_button">Cancel</string>
    <string name="event_deleted">Event Deleted Successfully</string>
    <string name="event_added">Event Added Successfully</string>
    <string name="event_title">Events</string>
    

</resources>
