<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:screenOrientation="portrait">
	<LinearLayout
		android:id="@+id/buttons"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:orientation="horizontal"
		android:background="#656565"
		android:padding="5dp">
		
	    <TextView  android:id="@+id/eventID"
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content"
				    android:visibility="gone" />


		<Button
		    android:id="@+id/button_save"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="2"
		    android:onClick="addNewEvent"
		    android:text="@string/event_add_button" />

	</LinearLayout>
	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:layout_alignParentTop="true"
		android:layout_above="@id/buttons">
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:paddingBottom="5dp"
			android:paddingLeft="5dp"
			android:paddingRight="5dp">
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:paddingTop="5dp">

				<TextView  
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content"
				    android:text="@string/event_name" />

				<EditText android:id="@+id/text_eventname" 
					android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:inputType="text"/>
			</LinearLayout>
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:paddingTop="5dp">

				<TextView 
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content"
				    android:text="@string/event_location" />

				<EditText android:id="@+id/text_eventlocation" 
					android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:inputType="text"/>
			</LinearLayout>
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:paddingTop="5dp">

				<TextView android:id="@+id/eventdate" 
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content"
				    android:text="@string/event_date" />
				
				<EditText android:id="@+id/text_eventdate" 
					android:layout_width="fill_parent"
					android:layout_height="wrap_content" 
					android:inputType="date"/>

			    
			

				
			</LinearLayout>

			<LinearLayout
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:orientation="vertical"
			    android:paddingTop="5dp" >
			</LinearLayout>

			
			
			<TextView
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:text="@string/event_time" />
			
			<EditText android:id="@+id/text_eventtime" 
					android:layout_width="fill_parent"
					android:layout_height="wrap_content" 
					android:inputType="time"/>

		</LinearLayout>
	</ScrollView>
</RelativeLayout>